namespace EasySave.App.Console.Models;

public sealed record MenuOption(int Id, string Label);

