@startuml EasySave_AppConsole_Classes

' ============================================
' CONFIGURATION
' ============================================
skinparam backgroundColor white
skinparam shadowing false
skinparam linetype polyline
skinparam nodesep 200
skinparam ranksep 200

skinparam class {
    BackgroundColor<<Controller>> #FFF3E0
    BorderColor<<Controller>> #F57C00
    BackgroundColor<<View>> #E1F5FE
    BorderColor<<View>> #0277BD
    BackgroundColor<<Input>> #E8F5E9
    BorderColor<<Input>> #2E7D32
    BackgroundColor<<Model>> #F3E5F5
    BorderColor<<Model>> #7B1FA2
    BackgroundColor<<Bootstrap>> #FFFDE7
    BorderColor<<Bootstrap>> #F9A825
}

title Diagramme de classes - EasySave.App.Console (Console UI)
left to right direction
skinparam packageStyle rectangle

' ============================================
' PACKAGE: EasySave.App.Console
' ============================================
package "EasySave.App.Console" {

  package "Bootstrap" {
    class Program <<Bootstrap>> {
      {static} -void Main(string[] args)
    }
  }

  package "Controllers" {
    class BackupController <<Controller>> {
      -IBackupService _backupService
      -IJobService _jobService
      -BackupView _backupView
      -ConsoleView _consoleView
      -ArgsParser _argsParser
      __
      +BackupController(backupService: IBackupService, jobService: IJobService, backupView: BackupView, consoleView: ConsoleView, argsParser: ArgsParser)
      +void RunMenu()
      +void RunFromArgs(string rawArgs)
      +BackupResultDto? RunJobById(int id, bool waitForKey = true)
      +void RunAll()
      -void RunOneInteractive()
    }

    class JobController <<Controller>> {
      -IJobService _jobService
      -JobView _jobView
      -ConsoleView _consoleView
      __
      +JobController(jobService: IJobService, jobView: JobView, consoleView: ConsoleView)
      +void RunMenu()
      +void ListJobs()
      +void CreateJob()
      +void UpdateJob()
      +void DeleteJob()
    }

    class MenuController <<Controller>> {
      -ConsoleView _view
      -ConsoleInput _input
      -JobController _jobController
      -BackupController _backupController
      -SettingsController _settingsController
      __
      +MenuController(view: ConsoleView, input: ConsoleInput, jobController: JobController, backupController: BackupController, settingsController: SettingsController)
      +void Run()
    }

    class SettingsController <<Controller>> {
      -AppConfig _config
      -AppConfigRepository _configRepository
      -ConsoleView _consoleView
      -ConsoleInput _input
      __
      +SettingsController(config: AppConfig, configRepository: AppConfigRepository, consoleView: ConsoleView, input: ConsoleInput)
      +void Run()
      -void UpdateLanguage(Language language)
      -void UpdateLogFormat(LogFormat logFormat)
    }
  }

  package "Views" {
    class BackupView <<View>> {
      -ConsoleInput _input
      __
      +BackupView(input: ConsoleInput)
      +void ShowBackupMenu()
      +int ReadMenuChoice()
      +void ShowJobs(IReadOnlyList<BackupJob> jobs)
      +int AskJobId()
      +void ShowRunStart(BackupJob job)
      +void ShowRunEnd(BackupResultDto result)
      +void ShowBatchResult(IReadOnlyList<BackupResultDto> results)
    }

    class ConsoleView <<View>> {
      +void Clear()
      +void ShowHeader()
      +void ShowMenu(string title, IEnumerable<MenuOption> options)
      +void ShowError(string message)
      +void ShowSuccess(string message)
      +void ShowInfo(string message)
      +void WaitForKey()
    }

    class JobView <<View>> {
      -ConsoleInput _input
      __
      +JobView(input: ConsoleInput)
      +void ShowJobMenu()
      +int ReadMenuChoice()
      +string AskJobName()
      +string AskSourcePath()
      +string AskTargetPath()
      +BackupType AskBackupType()
      +void ShowJobs(IReadOnlyList<BackupJob> jobs)
      +string AskJobId()
      +int AskJobFieldToEdit()
      +bool AskJobActiveState()
    }
  }

  package "Input" {
    class ArgsParser <<Input>> {
      -{static} int MinId = 1
      -{static} int MaxId = 5
      __
      +IReadOnlyList<int> Parse(string rawArgs)
      -{static} void ValidateId(int id)
    }

    class ConsoleInput <<Input>> {
      +int ReadInt(string prompt)
      +string ReadNonEmptyString(string prompt)
      +int ReadChoice(string prompt, IEnumerable<int> validChoices)
    }
  }

  package "Models" {
    class MenuOption <<Model>> {
      +int Id
      +string Label
    }
  }
}

' ============================================
' RELATIONS - App.Console
' ============================================
EasySave.App.Console.Controllers.BackupController --> EasySave.App.Console.Views.BackupView : uses
EasySave.App.Console.Controllers.BackupController --> EasySave.App.Console.Views.ConsoleView : uses
EasySave.App.Console.Controllers.BackupController --> EasySave.App.Console.Input.ArgsParser : uses
EasySave.App.Console.Controllers.BackupController ..> EasySave.Core.Interfaces.IBackupService : uses
EasySave.App.Console.Controllers.BackupController ..> EasySave.Core.Interfaces.IJobService : uses
EasySave.App.Console.Controllers.BackupController ..> EasySave.Core.DTO.BackupResultDto : returns

EasySave.App.Console.Controllers.JobController --> EasySave.App.Console.Views.JobView : uses
EasySave.App.Console.Controllers.JobController --> EasySave.App.Console.Views.ConsoleView : uses
EasySave.App.Console.Controllers.JobController ..> EasySave.Core.Interfaces.IJobService : uses

EasySave.App.Console.Controllers.MenuController --> EasySave.App.Console.Views.ConsoleView : uses
EasySave.App.Console.Controllers.MenuController --> EasySave.App.Console.Input.ConsoleInput : uses
EasySave.App.Console.Controllers.MenuController --> EasySave.App.Console.Controllers.JobController : routes
EasySave.App.Console.Controllers.MenuController --> EasySave.App.Console.Controllers.BackupController : routes
EasySave.App.Console.Controllers.MenuController --> EasySave.App.Console.Controllers.SettingsController : routes

EasySave.App.Console.Controllers.SettingsController --> EasySave.App.Console.Views.ConsoleView : uses
EasySave.App.Console.Controllers.SettingsController --> EasySave.App.Console.Input.ConsoleInput : uses
EasySave.App.Console.Controllers.SettingsController ..> EasySave.App.Repositories.AppConfigRepository : persists
EasySave.App.Console.Controllers.SettingsController ..> EasySave.Core.Models.AppConfig : updates
EasySave.App.Console.Controllers.SettingsController ..> EasySave.Core.Common.Localization : uses
EasySave.App.Console.Controllers.SettingsController ..> EasySave.Core.Enums.Language : uses
EasySave.App.Console.Controllers.SettingsController ..> EasySave.EasyLog.Options.LogFormat : uses

EasySave.App.Console.Views.BackupView --> EasySave.App.Console.Input.ConsoleInput : reads
EasySave.App.Console.Views.BackupView ..> EasySave.Core.Models.BackupJob : shows
EasySave.App.Console.Views.BackupView ..> EasySave.Core.DTO.BackupResultDto : shows

EasySave.App.Console.Views.JobView --> EasySave.App.Console.Input.ConsoleInput : reads
EasySave.App.Console.Views.JobView ..> EasySave.Core.Models.BackupJob : shows
EasySave.App.Console.Views.JobView ..> EasySave.Core.Enums.BackupType : selects

EasySave.App.Console.Views.ConsoleView ..> EasySave.App.Console.Models.MenuOption : shows

EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Services.PathProvider : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Repositories.AppConfigRepository : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Services.JobService : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Services.BackupService : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Input.ConsoleInput : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Input.ArgsParser : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Views.ConsoleView : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Views.JobView : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Views.BackupView : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Controllers.SettingsController : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Controllers.JobController : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Controllers.BackupController : creates
EasySave.App.Console.Bootstrap.Program ..> EasySave.App.Console.Controllers.MenuController : creates

@enduml
